# try-vector-search-on-common-db

./: LICENSE  best_way_to_jsonify_numpy.ipynb  pyproject.toml  try_postgres_vector_search.ipynb  try_redis_vector_search.ipynb  try_vector_search.ipynb
.split_notebook/: 0_part.ipynb  10_part.ipynb  11_part.ipynb  12_part.ipynb  13_part.ipynb  14_part.ipynb  15_part.ipynb  16_part.ipynb  1_part.ipynb  2_part.ipynb  3_part.ipynb  4_part.ipynb  5_part.ipynb  6_part.ipynb  7_part.ipynb  8_part.ipynb  9_part.ipynb
postgres/: Dockerfile
utils/: batched.py  cosine_dist.py  numpy_to_json.py
