[tool.poetry]
name = "vector-db-analysis"
version = "0.1.0"
description = ""
authors = ["mihas <mihasK@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "vector_db_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
sqlalchemy = "^2.0.20"
pgvector = "^0.2.1"
psycopg2-binary = "^2.9.7"
psycopg2 = "^2.9.7"
psycopg = {version = "^3.1.10", extras = ["binary"]}
numpy = "1.24.3"
numba = "^0.57.1"
tqdm = "^4.66.1"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
